lib/common/string-hashset.h

G_BEGIN_DECLS

#define STRING_TYPE_HASHSET (string_hashset_get_type())
G_DECLARE_DERIVABLE_TYPE(StringHashset, string_hashset, STRING, HASHSET, GObject)

StringHashset * string_hashset_new (void);
const gchar * string_hashset_get (StringHashset *self, guint index);
gboolean string_hashset_add (StringHashset *self, const gchar *str);
gboolean string_hashset_add_all (StringHashset *self, GList *add);
gboolean string_hashset_contains (StringHashset *self, const gchar *str);
gboolean string_hashset_contains_all (StringHashset *self, GList *contents);
gboolean string_hashset_remove (StringHashset *self, const gchar *str);
gboolean string_hashset_remove_all (StringHashset *self, GList *remove);
gboolean string_hashset_retain_all (StringHashset *self, GList *retain);
GList * string_hashset_list (StringHashset *self);
void string_hashset_clear (StringHashset *self);