lib/common/FontManager.vapi


[CCode (cprefix = "FontManager", gir_namespace = "FontManager", gir_version = "0.7.4", lower_case_cprefix = "font_manager_")]
namespace FontManager {
	[CCode (cheader_filename = "font-manager-alias.h", type_id = "font_manager_alias_element_get_type ()")]
	public class AliasElement : GLib.Object {
		[CCode (has_construct_function = false)]
		public AliasElement (string? family);
		public unowned FontManager.StringHashset @get (string priority);
		[NoAccessorMethod]
		public FontManager.StringHashset accept { owned get; set; }
		[NoAccessorMethod]
		public FontManager.StringHashset @default { owned get; set; }
		[NoAccessorMethod]
		public string family { owned get; set; }
		[NoAccessorMethod]
		public FontManager.StringHashset prefer { owned get; set; }
	}
	[CCode (cheader_filename = "font-manager-aliases.h", type_id = "font_manager_aliases_get_type ()")]
	public class Aliases : GLib.Object {
		[CCode (has_construct_function = false)]
		public Aliases ();
		public bool add (string family);
		public bool add_element (owned FontManager.AliasElement element);
		public bool contains (string family);
		public unowned FontManager.AliasElement @get (string family);
		public string? get_filepath ();
		public GLib.List<weak FontManager.AliasElement> list ();
		public bool load ();
		public bool remove (string family);
		public bool save ();
		[NoAccessorMethod]
		public string config_dir { owned get; set; }
		[NoAccessorMethod]
		public string target_file { owned get; set; }
	}
	[CCode (cheader_filename = "font-manager-codepoint-list.h", type_id = "font_manager_codepoint_list_get_type ()")]
	public class CodepointList : GLib.Object, Unicode.CodepointList {
		[CCode (has_construct_function = false)]
		public CodepointList ();
		public void set_filter (GLib.List<uint>? filter);
		public void set_font (Json.Object? font);
		public GLib.List<uint> filter { set; }
		public Json.Object font { set; }
	}
	[CCode (cheader_filename = "font-manager-database.h", type_id = "font_manager_database_get_type ()")]
	public class Database : GLib.Object {
		public Sqlite.Database db;
		public Sqlite.Statement stmt;
		[CCode (has_construct_function = false)]
		public Database ();
		public void attach (FontManager.DatabaseType type) throws FontManager.DatabaseError;
		public void begin_transaction () throws FontManager.DatabaseError;
		public void commit_transaction () throws FontManager.DatabaseError;
		public void detach (FontManager.DatabaseType type) throws FontManager.DatabaseError;
		public static GLib.Quark error_quark ();
		public void execute_query (string sql) throws FontManager.DatabaseError;
		public static string? get_file (FontManager.DatabaseType type);
		public Json.Object? get_object (string sql) throws FontManager.DatabaseError;
		public static unowned string get_type_name (FontManager.DatabaseType type);
		public int get_version () throws FontManager.DatabaseError;
		public void initialize (FontManager.DatabaseType type) throws FontManager.DatabaseError;
		public FontManager.DatabaseIterator iterator ();
		public void open () throws FontManager.DatabaseError;
		public void set_version (int version) throws FontManager.DatabaseError;
		public void vacuum () throws FontManager.DatabaseError;
		[NoAccessorMethod]
		public string? file { owned get; set; }
	}
	[CCode (cheader_filename = "font-manager-database.h", type_id = "font_manager_database_iterator_get_type ()")]
	public class DatabaseIterator : GLib.Object {
		[CCode (has_construct_function = false)]
		public DatabaseIterator (FontManager.Database db);
		public unowned Sqlite.Statement @get ();
		public bool next ();
	}
	[CCode (cheader_filename = "font-manager-family.h", type_id = "font_manager_family_get_type ()")]
	public class Family : GLib.Object, FontManager.JsonProxy {
		[CCode (has_construct_function = false)]
		public Family ();
		public unowned Json.Object get_default_variant ();
		[NoAccessorMethod]
		public string description { owned get; }
		[NoAccessorMethod]
		public string family { owned get; }
		[NoAccessorMethod]
		public int n_variations { get; }
		[NoAccessorMethod]
		public Json.Array variations { owned get; }
	}
	[CCode (cheader_filename = "font-manager-font.h", type_id = "font_manager_font_get_type ()")]
	public class Font : GLib.Object, FontManager.JsonProxy {
		[CCode (has_construct_function = false)]
		public Font ();
		[NoAccessorMethod]
		public string description { owned get; }
		[NoAccessorMethod]
		public string family { owned get; }
		[NoAccessorMethod]
		public string filepath { owned get; }
		[NoAccessorMethod]
		public int findex { get; }
		[NoAccessorMethod]
		public int slant { get; }
		[NoAccessorMethod]
		public int spacing { get; }
		[NoAccessorMethod]
		public string style { owned get; }
		[NoAccessorMethod]
		public int weight { get; }
		[NoAccessorMethod]
		public int width { get; }
	}
	[CCode (cheader_filename = "font-manager-font-info.h", type_id = "font_manager_font_info_get_type ()")]
	public class FontInfo : GLib.Object, FontManager.JsonProxy {
		[CCode (has_construct_function = false)]
		public FontInfo ();
		[NoAccessorMethod]
		public string checksum { owned get; }
		[NoAccessorMethod]
		public string? copyright { owned get; }
		[NoAccessorMethod]
		public string? description { owned get; }
		[NoAccessorMethod]
		public string? designer { owned get; }
		[NoAccessorMethod]
		public string? designer_url { owned get; }
		[NoAccessorMethod]
		public string family { owned get; }
		[NoAccessorMethod]
		public string filepath { owned get; }
		[NoAccessorMethod]
		public string filesize { owned get; }
		[NoAccessorMethod]
		public string filetype { owned get; }
		[NoAccessorMethod]
		public int findex { get; }
		[NoAccessorMethod]
		public int fsType { get; }
		[NoAccessorMethod]
		public string? license_data { owned get; }
		[NoAccessorMethod]
		public string license_type { owned get; }
		[NoAccessorMethod]
		public string? license_url { owned get; }
		[NoAccessorMethod]
		public int n_glyphs { get; }
		[NoAccessorMethod]
		public int owner { get; }
		[NoAccessorMethod]
		public Json.Array panose { owned get; }
		[NoAccessorMethod]
		public string psname { owned get; }
		[NoAccessorMethod]
		public string style { owned get; }
		[NoAccessorMethod]
		public string vendor { owned get; }
		[NoAccessorMethod]
		public string version { owned get; }
	}
	[CCode (cheader_filename = "font-manager-font-model.h", type_id = "font_manager_font_model_get_type ()")]
	public class FontModel : GLib.Object, Gtk.TreeDragDest, Gtk.TreeDragSource, Gtk.TreeModel {
		[CCode (has_construct_function = false)]
		public FontModel ();
		[NoAccessorMethod]
		public Json.Array source_array { owned get; set; }
	}
	[CCode (cheader_filename = "font-manager-properties.h", type_id = "font_manager_properties_get_type ()")]
	public class Properties : GLib.Object {
		[CCode (has_construct_function = false)]
		public Properties ();
		[NoWrapper]
		public virtual void add_match_criteria (FontManager.XmlWriter writer);
		public bool discard ();
		public string? get_filepath ();
		public virtual bool load ();
		[NoWrapper]
		public virtual void parse_edit_node (Xml.Node edit_node);
		[NoWrapper]
		public virtual void parse_test_node (Xml.Node test_node);
		public void reset ();
		public virtual bool save ();
		[NoAccessorMethod]
		public bool antialias { get; set; }
		[NoAccessorMethod]
		public bool autohint { get; set; }
		[NoAccessorMethod]
		public string config_dir { owned get; set; }
		[NoAccessorMethod]
		public double dpi { get; set; }
		[NoAccessorMethod]
		public bool embeddedbitmap { get; set; }
		[NoAccessorMethod]
		public bool hinting { get; set; }
		[NoAccessorMethod]
		public int hintstyle { get; set; }
		[NoAccessorMethod]
		public int lcdfilter { get; set; }
		[NoAccessorMethod]
		public double less { get; set; }
		[NoAccessorMethod]
		public double more { get; set; }
		[NoAccessorMethod]
		public int rgba { get; set; }
		[NoAccessorMethod]
		public double scale { get; set; }
		[NoAccessorMethod]
		public string target_file { owned get; set; }
		[NoAccessorMethod]
		public int type { get; set; }
	}
	[CCode (cheader_filename = "font-manager-selections.h", type_id = "font_manager_selections_get_type ()")]
	public class Selections : FontManager.StringHashset {
		[CCode (has_construct_function = false)]
		public Selections ();
		public string? get_filepath ();
		[NoWrapper]
		public virtual unowned Xml.Node? get_selections (Xml.Doc* doc);
		public virtual bool load ();
		[NoWrapper]
		public virtual void parse_selections (Xml.Node selections);
		public virtual bool save ();
		[NoWrapper]
		public virtual void write_selections (FontManager.XmlWriter writer);
		[NoAccessorMethod]
		public string config_dir { owned get; set; }
		[NoAccessorMethod]
		public string target_element { owned get; set; }
		[NoAccessorMethod]
		public string target_file { owned get; set; }
		public virtual signal void changed ();
	}
	[CCode (cheader_filename = "font-manager-source.h", type_id = "font_manager_source_get_type ()")]
	public class Source : GLib.Object {
		[CCode (has_construct_function = false)]
		public Source (GLib.File file);
		public string? get_status_message ();
		public void update ();
		[NoAccessorMethod]
		public bool active { get; set; }
		[NoAccessorMethod]
		public bool available { get; }
		[NoAccessorMethod]
		public GLib.File file { owned get; set; }
		[NoAccessorMethod]
		public string icon_name { owned get; }
		[NoAccessorMethod]
		public string name { owned get; }
		[NoAccessorMethod]
		public string path { owned get; }
	}
	[CCode (cheader_filename = "string-hashset.h", cname = "StringHashset", type_id = "string_hashset_get_type ()")]
	public class StringHashset : GLib.Object {
		[CCode (cname = "string_hashset_new", has_construct_function = false)]
		public StringHashset ();
		[CCode (cname = "string_hashset_add")]
		public bool add (string str);
		[CCode (cname = "string_hashset_add_all")]
		public bool add_all (GLib.List<string> add);
		[CCode (cname = "string_hashset_clear")]
		public void clear ();
		[CCode (cname = "string_hashset_contains")]
		public bool contains (string str);
		[CCode (cname = "string_hashset_contains_all")]
		public bool contains_all (GLib.List<string> contents);
		[CCode (cname = "string_hashset_get")]
		public unowned string @get (uint index);
		[CCode (cname = "string_hashset_list")]
		public GLib.List<weak string> list ();
		[CCode (cname = "string_hashset_remove")]
		public bool remove (string str);
		[CCode (cname = "string_hashset_remove_all")]
		public bool remove_all (GLib.List<string> remove);
		[CCode (cname = "string_hashset_retain_all")]
		public bool retain_all (GLib.List<string> retain);
		[NoAccessorMethod]
		public uint size { get; }
	}
	[CCode (cheader_filename = "font-manager-xml-writer.h", type_id = "font_manager_xml_writer_get_type ()")]
	public class XmlWriter : GLib.Object {
		[CCode (has_construct_function = false)]
		public XmlWriter ();
		public void add_assignment (string a_name, string a_type, string a_val);
		public void add_elements (string e_type, GLib.List<string> elements);
		public void add_patelt (string p_name, string p_type, string p_val);
		public void add_selections (string selection_type, GLib.List<string> selections);
		public void add_test_element (string t_name, string t_test, string t_type, string t_val);
		public bool close ();
		public void discard ();
		public int end_element ();
		public bool open (string filepath);
		public int start_element (string name);
		public int write_attribute (string name, string content);
		public int write_element (string name, string content);
		[NoAccessorMethod]
		public string filepath { owned get; }
	}
	[CCode (cheader_filename = "font-manager-filter.h", type_cname = "FontManagerFilterInterface", type_id = "font_manager_filter_get_type ()")]
	public interface Filter : GLib.Object {
		public abstract void update ();
		public abstract bool visible_func (Gtk.TreeModel model, Gtk.TreeIter iter);
